--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-scroll": "^1.8.9",
     "styled-components": "^6.0.0-rc.3",
     "swiper": "^9.4.1",
     "typewriter-effect": "^2.20.1"
